# Dezaina

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile_commands.json  package-lock.json  package.json  xmake.lua
app/native/: CMakeLists.txt  depends.cmake  xmake.lua
app/native/src/: event.h  file_panel.h  inter_panel.h  loader.cpp  loader.h  main.cpp  status_panel.h  ui.cpp
dea/: CMakeLists.txt  depends.cmake  dezaina.cpp  dezaina.h  prims.h  timer.h  xmake.lua
dea/UI/: primitives.h  ui.cpp  ui.h
dea/base/: algorithm.h  buffer.cpp  buffer.h  data.h  math.h  object.h  type.h  type_traits.h
dea/change/: change.cpp  change.h  command.cpp  command.h  primitives.h  undoRedo.h
dea/command/: CMakeLists.txt  build_cmds.generated.cpp  cmd.h  cmds.generated.h  cmds.json  command.h  primitives.h
dea/command/src/: cmd.h  cmds.generated.h  cmds.h  command.cpp  command.h  primitives.h  repo.h
dea/command/src/tool/: cmd.mustache  cmd_config.js  generate.js  package.json
dea/command/tool/: build_cmds.mustache  cmd.mustache
dea/common/: array.h  buffer.cpp  buffer.h  const_string.h  data.h  object.h  type_traits.h
dea/config/: color.h  config.h  keymap.json  primitives.h  size.h
dea/dezaina/: listener.h
dea/document/: document.cpp  document.h  editor.cpp  editor.h  flushEditor.cpp  listener.h  utility.h
dea/document/include/: document.h  editor.h
dea/document/src/: change.cpp  change.h  document.cpp  document.h  editor.cpp  editor.h  executor.cpp  executor.h  node_utility.h
dea/event/: emitter.h  event_system.cpp  event_system.h  key.h  listener.h  mouse.h  primitives.h  ui_event.h
dea/event/include/: event.h
dea/event/src/: emitter.h  event.h  event_system.h  key.h  listener.h  mouse.h  mouse_event.h  primitives.h  ui_event.h
dea/geometry/: fill.cpp  geometry.cpp  geometry.h  stroke.cpp
dea/gfx/: fill.cpp  geometry.h  gfx_types.h  network.cpp  network.h
dea/hotkey/: hotkey.cpp  hotkey.h
dea/hotkey/src/: hotkey.cpp  hotkey.h
dea/interaction/: bound_editor.cpp  bound_editor.h  creation.cpp  creation.h  ellipse_editor.h  frame_editor.h  interaction.cpp  interaction.h  line_editor.h  listener.h  mouse_interaction.cpp  mouse_interaction.h  node_editor.cpp  node_editor.h  polygon_editor.h  radius_editor.cpp  radius_editor.h  rectangle_editor.cpp  rectangle_editor.h  selection.cpp  selection.h  star_editor.h  text_editor.h  utility.cpp  utility.h  vector_editor.cpp  vector_editor.h  viewport.cpp
dea/interaction/include/: interaction.h
dea/interaction/node/: container.h  frame.h  interaction_node.h  page.h  path.h  rectangle.h  type.h
dea/interaction/src/: creation.cpp  creation.h  interaction.cpp  interaction.h  listener.h  mouse_interaction.h  node_editor.cpp  node_editor.h  rectangle_editor.cpp  rectangle_editor.h  selection.cpp  selection.h  util.h  utility.cpp  utility.h  viewport.cpp
dea/interaction/src/node/: container.h  frame.h  interaction_node.h  page.h  path.h  rectangle.h  type.h
dea/layout/: constraint_layout.cpp  constraint_layout.h  layout.h
dea/layout/include/: layout.h
dea/node/: CMakeLists.txt  container.cpp  container.h  guid.h  matrix.cpp  node.generated.h  node.h  node_base.generated.h  rect.cpp  selection.h  type.generated.h  type.h  utility.cpp  utility.h  vector.cpp  xmake.lua
dea/node/include/: node.h
dea/node/src/: container.h  document.cpp  document.h  ellipse.h  frame.h  guid.h  instance.h  line.h  node.generated.h  page.h  polygon.h  rectangle.h  star.h  symbol.h  text.h  vector.h
dea/node/src/node-base/: node.generated.h  node.h  node_base.generated.h  type.generated.h  type.h
dea/node/src/tool/: generate-node-definitoin.js  node.mustache  type.mustache
dea/node/src/tool/definiations/: baseMixins.js  enums.js  nodeBase.js  nodeMixins.js  structs.js
dea/node/tool/: generate-node-defination.js  generate-node-definitoin.js  node.mustache  node_base.mustache  type.mustache
dea/node/tool/definiations/: baseMixins.js  customType.js  enums.js  index.js  message.js  nodeBase.js  nodeMixins.js  structs.js
dea/primitives/: layout.h
dea/render/: fill.cpp  geometry.cpp  geometry.h  paint.cpp  paint.h  render.cpp  render.h  stroke.cpp  utility.h
dea/render/include/: render.h
dea/render/src/: paint.cpp  paint.h  render.cpp  render.h
dea/resource/: blob.h  image.h  primitives.h  resource.h
dea/resource/include/: resource.h
dea/resource/src/: blob.h  image.h  resource.cpp  resource.h
dea/schema/: CMakeLists.txt  message.h  utility.h
dea/utility/: coords.h  memory_pool.h  node_utility.cpp  node_utility.h  simple_memory_pool.h  skia.h  zip.h
dea/viewport/: CMakeLists.txt  viewport.cpp  viewport.h
dea/viewport/include/: viewport.h
dea/viewport/src/: viewport.cpp
dea/xmake/: option.lua  package.lua
src/base/: CMakeLists.txt  buffer.h  map.h
src/base/source/: buffer.cpp  buffer.h  class_tool.h
src/core/: CMakeLists.txt
src/core/cmake/: depends.cmake
src/core/source/: base_type.h  desaina.cpp  desaina.h  desaina_kiwi.h
src/core/source/base/: math.h
src/core/source/config/: color.h  editor.h  interaction.h
src/core/source/resource/: resouce.cpp
src/core/source/services/: blob_service.cpp  blob_service.h  id_generator.h  services.h
src/ui/native/: CMakeLists.txt
src/ui/native/source/: create_node_panel.cpp  create_node_panel.h  event.h  file_panel.h  main.cpp  props_panel.cpp  props_panel.h
tmp/dea/: CMakeLists.txt  dezaina.h
tmp/dea/change/: CMakeLists.txt
tmp/dea/change/src/: change.h
tmp/dea/common/: base_type.h  buffer.h
tmp/dea/document/: CMakeLists.txt
tmp/dea/document/include/: document.h  editor.h
tmp/dea/document/src/: change.cpp  change.h  document.h  editor.cpp  executor.h
tmp/dea/node/: CMakeLists.txt
tmp/dea/node/include/: node.h
tmp/dea/node/src/: container.h  document.h  frame.h  guid.h  instance.h  line.h  page.h  polygon.h  rectangle.h  star.h  symbol.h  text.h  vector.h
tmp/dea/resource/: CMakeLists.txt
tmp/dea/resource/src/: blob.h  resource.cpp  resource.h
tmp/dea/schema/: CMakeLists.txt
tmp/dea/schema/include/: message.h
(+310 files in other folders)
