set(TARGET_NAME Node)

set(TARGET_INCLUE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/src/figma
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${PROJECT_SOURCE_DIR}/dea/schema/include
	${PROJECT_SOURCE_DIR}/dea/vendor/figma
	${PROJECT_SOURCE_DIR}/dea)

file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "*.cpp")
add_library(${TARGET_NAME} STATIC ${SOURCE_FILES})

target_include_directories(${TARGET_NAME} PUBLIC ${TARGET_INCLUE_DIRS})
