set(TARGET_NAME DesainaBase)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(TARGET_INCLUE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/source/
	)

file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS "*.cpp")
add_library(${TARGET_NAME} STATIC ${SOURCE_FILES})

set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 20)
target_include_directories(${TARGET_NAME} PUBLIC ${TARGET_INCLUE_DIRS})
