set(TARGET_NAME DesainaUI)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/depends.cmake)
set(TARGET_INCLUE_DIRS
	${PROJECT_SOURCE_DIR}/src/
	${SDL_INCLUDE_DIR}
	${imgui_SOURCE_DIR})

set(TARGET_LINK_LIBS
  DesainaCore
  DesainaBase
  ${SDL_LIBRARIES}
  imgui)

if(APPLE)
  set(TARGET_LINK_LIBS ${TARGET_LINK_LIBS} "-framework OpenGL")
else()
  set(TARGET_LINK_LIBS ${TARGET_LINK_LIBS} GL)
endif()
 

file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS "*.h")
file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
add_executable(${TARGET_NAME} ${HEADER_FILES} ${SOURCE_FILES})

set_target_properties(${TARGET_NAME} PROPERTIES CXX_STANDARD 20)

# target_include_directories(${TARGET_NAME} PUBLIC ${TARGET_INCLUE_DIRS})
# target_link_directories(${TARGET_NAME} PUBLIC ${TARGET_LINK_DIRS})

target_link_libraries(${TARGET_NAME} PUBLIC ${TARGET_LINK_LIBS})